ilex/tests/ui/unrecognized/unrecognized.stderr
error: unrecognized characters
 --> unrecognized.txt:1:1
  |
1 | multiple, null, [unrecognized], chunks!~  
  | ^^^^^^^^^
  |
  = note: reported at: ilex/src/rt/mod.rs:36:8

error: unrecognized character
 --> unrecognized.txt:1:15
  |
1 | multiple, null, [unrecognized], chunks!~  
  |               ^
  |
  = note: reported at: ilex/src/rt/mod.rs:36:8

error: unrecognized characters
 --> unrecognized.txt:1:18
  |
1 | multiple, null, [unrecognized], chunks!~  
  |                  ^^^^^^^^^^^^
  |
  = note: reported at: ilex/src/rt/mod.rs:36:8

error: unrecognized character
 --> unrecognized.txt:1:31
  |
1 | multiple, null, [unrecognized], chunks!~  
  |                               ^
  |
  = note: reported at: ilex/src/rt/mod.rs:36:8

error: unrecognized characters
 --> unrecognized.txt:1:33
  |
1 | multiple, null, [unrecognized], chunks!~  
  |                                 ^^^^^^^^
  |
  = note: reported at: ilex/src/rt/mod.rs:36:8

error: aborting due to 5 errors
